--- a/abc.theme.css
+++ b/abc.theme.css
@@ -1,6 +1,6 @@
 /**
- * @name YourThemeName
- * @author YourName
+ * @name discordtheme
+ * @author felix8893
  * @version 1.0.0
  * @description A brief description of your theme.
  * @source https://github.com/YourUsername/YourThemeRepo
