--- a/abc.theme.css
+++ b/abc.theme.css
@@ -3,7 +3,7 @@
  * @author felix8893
  * @version 1.0.0
  * @description A brief description of your theme.
- * @source https://github.com/YourUsername/YourThemeRepo
+ * @source https://github.com/felix8893/Code-library/blob/main/abc.theme.css
  * @updateUrl https://raw.githubusercontent.com/YourUsername/YourThemeRepo/main/YourThemeFile.theme.css
  */
 
